Compiler/dartParser.java
// Generated from C:/Users/Abeer/IdeaProjects/compileedit/src/Compiler\dartParser.g4 by ANTLR 4.10.1
package Compiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dartParser extends Parser {
    public static final int
            INITSTATE = 1, TITLE = 2, THEME = 3, DEBUGSHOWMODE = 4, ThemeData = 5, PrimarySwatch = 6,
            BIGER = 7, SMALLER = 8, OPERATION = 9, SCAFFOLD = 10, Q_MARK = 11, STATE = 12, CREATSTATE = 13,
            KEY = 14, FULL = 15, LESS = 16, FOREACH = 17, FOR = 18, TEXT = 19, CHIS = 20, OPEN_PR = 21,
            CLOSE_PR = 22, COLUMN = 23, ROW = 24, FIT = 25, BOXFIT = 26, FILL = 27, WS = 28, ASSET = 29,
            IMAGE = 30, APPBAR2 = 31, APPBAR = 32, BACK = 33, MAIN = 34, BODY = 35, RUNAPP = 36,
            LIST = 37, BUILD = 38, OVERRIDE = 39, SETSTATE = 40, ONTAP = 41, GestureDetector = 42,
            WIDGET = 43, BUILDCONTEXT = 44, PADDING = 45, PADDING1 = 46, EDGE = 47, ALL = 48,
            VOID = 49, TYPE = 50, HEIGHT = 51, WIDTH = 52, BOOL_VAL = 53, SIZEDBOX = 54, CONTAINER = 55,
            CHILD = 56, COLORS = 57, COL = 58, COLOR = 59, D_DOT = 60, DOT = 61, BORDER2 = 62, EXPANDED = 63,
            CIRCULAR = 64, BORDERRADIUS = 65, DECORATION = 66, BD = 67, LISTVIEW = 68, SEPARATED = 69,
            ItemBuilder = 70, SeparatorBuilder = 71, ItemCount = 72, Return = 73, MAINAXIS = 74,
            MAINAXIS1 = 75, CENTER = 76, CONTEXT = 77, INDEX = 78, EQUAL = 79, NUM_VAL = 80, SIMICOLON = 81,
            COLON = 82, OPEN_HEAD = 83, CLOSE_HEAD = 84, OPEN_BODY = 85, CLOSE_BODY = 86, FINAL = 87,
            CONST = 88, VAR = 89, ASYNC = 90, THIS = 91, ABSTRACT = 92, AS = 93, SYNC = 94, CLASS = 95,
            WITH = 96, STATIC = 97, DYNAMIC = 98, EXTERNAL = 99, GET = 100, SET = 101, OPERATOR = 102,
            SUPER = 103, FACTORY = 104, EXTENDS = 105, IMPLEMENTS = 106, ENUM = 107, NULL = 108,
            THROW = 109, NEW = 110, AWAIT = 111, DEFERRED = 112, EXPORT = 113, IMPORT = 114, LIBRARY = 115,
            PART = 116, TYPEDEF = 117, IS = 118, IF = 119, ELSE = 120, WHILE = 121, IN = 122, DO = 123,
            SWITCH = 124, CASE = 125, DEFAULT = 126, RETHROW = 127, TRY = 128, ON = 129, CATCH = 130,
            FINALLY = 131, RETURN = 132, BREAK = 133, CONTINUE = 134, YIELD = 135, SHOW = 136,
            HIDE = 137, OF = 138, ASSERT = 139, MATERIALAPP = 140, GMA = 141, GET1 = 142, TO = 143,
            OFF = 144, HOME = 145, VAR_NAME = 146, STRING_OPEN = 147, STRING_VAL = 148, STRING_CLOSE = 149,
            PRACET = 150, CLOSE_PRACET = 151, NUMBER = 152, HEX_NUMBER = 153, SingleLineString = 154,
            MultilineString = 155, IDENTIFIER_NO_DOLLAR = 156, IDENTIFIER = 157;
    public static final int
            RULE_prog = 0, RULE_file_syntax = 1, RULE_declear_var = 2, RULE_string_val = 3,
            RULE_val = 4, RULE_ifdart = 5, RULE_arguments = 6, RULE_block = 7, RULE_function = 8,
            RULE_for = 9, RULE_flutter = 10, RULE_imporT = 11, RULE_main = 12, RULE_runapp = 13,
            RULE_class = 14, RULE_class_less = 15, RULE_class_full = 16, RULE_class_full1 = 17,
            RULE_const = 18, RULE_state = 19, RULE_class_full2 = 20, RULE_initstate = 21,
            RULE_build = 22, RULE_widget = 23, RULE_child = 24, RULE_materialapp = 25,
            RULE_navigate_screen = 26, RULE_home = 27, RULE_title = 28, RULE_theme = 29,
            RULE_debugshowmode = 30, RULE_column = 31, RULE_row = 32, RULE_children = 33,
            RULE_text = 34, RULE_image = 35, RULE_scaffold = 36, RULE_appbar = 37,
            RULE_body = 38, RULE_padding1 = 39, RULE_padding = 40, RULE_expanded = 41,
            RULE_sizedbox = 42, RULE_hieght = 43, RULE_width = 44, RULE_listview = 45,
            RULE_itb = 46, RULE_sb = 47, RULE_ic = 48, RULE_container = 49, RULE_bord_rad = 50,
            RULE_color = 51, RULE_colors = 52, RULE_decoration = 53, RULE_list = 54,
            RULE_object = 55, RULE_varible = 56, RULE_gestureDetector = 57, RULE_ontap = 58,
            RULE_setstate = 59, RULE_setstate1 = 60;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public dartParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "prog", "file_syntax", "declear_var", "string_val", "val", "ifdart",
                "arguments", "block", "function", "for", "flutter", "imporT", "main",
                "runapp", "class", "class_less", "class_full", "class_full1", "const",
                "state", "class_full2", "initstate", "build", "widget", "child", "materialapp",
                "navigate_screen", "home", "title", "theme", "debugshowmode", "column",
                "row", "children", "text", "image", "scaffold", "appbar", "body", "padding1",
                "padding", "expanded", "sizedbox", "hieght", "width", "listview", "itb",
                "sb", "ic", "container", "bord_rad", "color", "colors", "decoration",
                "list", "object", "varible", "gestureDetector", "ontap", "setstate",
                "setstate1"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'initState'", "'title'", "'theme'", "'debugShowCheckedModeBanner'",
                "'ThemeData'", "'primarySwatch'", "'<'", "'>'", null, "'Scaffold'", "'?'",
                "'State'", "'createState'", "'key'", "'StatefulWidget '", "'StatelessWidget'",
                "'forEach'", "'for'", "'Text'", "'children'", "'['", "']'", "'Column'",
                "'Row'", "'fit:'", "'BoxFit'", "'fill'", null, "'asset'", null, "'appBar'",
                "'AppBar'", "'backgroundColor'", "'main'", "'body'", "'runApp'", "'List'",
                "'build'", "'@override'", "'setState'", "'onTap'", "'GestureDetector'",
                "'Widget'", "'BuildContext'", "'Padding'", "'padding:'", "'EdgeInsets.'",
                "'all'", "'void'", null, "'height'", "'width'", null, "'SizedBox'", "'Container'",
                "'child'", "'Colors'", null, "'color'", "':'", "'.'", "'BorderRadius'",
                "'Expanded'", "'circular'", "'borderRadius'", "'decoration'", "'BoxDecoration'",
                "'ListView'", "'separated'", "'itemBuilder'", "'separatorBuilder'", "'itemCount'",
                "'=>'", "'mainAxisAlignment:'", "'MainAxisAlignment'", "'center'", "'context'",
                "'index'", "'='", null, "';'", "','", "'('", "')'", null, null, "'final'",
                "'const'", "'var'", "'async'", "'this'", "'abstract'", "'as'", "'sync'",
                "'class'", "'with'", "'static'", "'dynamic'", "'external'", "'get'",
                "'set'", "'operator'", "'super'", "'factory'", "'extends'", "'implements'",
                "'enum'", "'null'", "'throw'", "'new'", "'await'", "'deferred'", "'export'",
                "'import'", "'library'", "'part'", "'typedef'", "'is'", "'if'", "'else'",
                "'while'", "'in'", "'do'", "'switch'", "'case'", "'default'", "'rethrow'",
                "'try'", "'on'", "'catch'", "'finally'", "'return'", "'break'", "'continue'",
                "'yield'", "'show'", "'hide'", "'of'", "'assert'", "'MaterialApp'", "'GetMaterialApp'",
                "'Get'", "'to'", "'off'", "'home'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "INITSTATE", "TITLE", "THEME", "DEBUGSHOWMODE", "ThemeData", "PrimarySwatch",
                "BIGER", "SMALLER", "OPERATION", "SCAFFOLD", "Q_MARK", "STATE", "CREATSTATE",
                "KEY", "FULL", "LESS", "FOREACH", "FOR", "TEXT", "CHIS", "OPEN_PR", "CLOSE_PR",
                "COLUMN", "ROW", "FIT", "BOXFIT", "FILL", "WS", "ASSET", "IMAGE", "APPBAR2",
                "APPBAR", "BACK", "MAIN", "BODY", "RUNAPP", "LIST", "BUILD", "OVERRIDE",
                "SETSTATE", "ONTAP", "GestureDetector", "WIDGET", "BUILDCONTEXT", "PADDING",
                "PADDING1", "EDGE", "ALL", "VOID", "TYPE", "HEIGHT", "WIDTH", "BOOL_VAL",
                "SIZEDBOX", "CONTAINER", "CHILD", "COLORS", "COL", "COLOR", "D_DOT",
                "DOT", "BORDER2", "EXPANDED", "CIRCULAR", "BORDERRADIUS", "DECORATION",
                "BD", "LISTVIEW", "SEPARATED", "ItemBuilder", "SeparatorBuilder", "ItemCount",
                "Return", "MAINAXIS", "MAINAXIS1", "CENTER", "CONTEXT", "INDEX", "EQUAL",
                "NUM_VAL", "SIMICOLON", "COLON", "OPEN_HEAD", "CLOSE_HEAD", "OPEN_BODY",
                "CLOSE_BODY", "FINAL", "CONST", "VAR", "ASYNC", "THIS", "ABSTRACT", "AS",
                "SYNC", "CLASS", "WITH", "STATIC", "DYNAMIC", "EXTERNAL", "GET", "SET",
                "OPERATOR", "SUPER", "FACTORY", "EXTENDS", "IMPLEMENTS", "ENUM", "NULL",
                "THROW", "NEW", "AWAIT", "DEFERRED", "EXPORT", "IMPORT", "LIBRARY", "PART",
                "TYPEDEF", "IS", "IF", "ELSE", "WHILE", "IN", "DO", "SWITCH", "CASE",
                "DEFAULT", "RETHROW", "TRY", "ON", "CATCH", "FINALLY", "RETURN", "BREAK",
                "CONTINUE", "YIELD", "SHOW", "HIDE", "OF", "ASSERT", "MATERIALAPP", "GMA",
                "GET1", "TO", "OFF", "HOME", "VAR_NAME", "STRING_OPEN", "STRING_VAL",
                "STRING_CLOSE", "PRACET", "CLOSE_PRACET", "NUMBER", "HEX_NUMBER", "SingleLineString",
                "MultilineString", "IDENTIFIER_NO_DOLLAR", "IDENTIFIER"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "dartParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(124);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(124);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(122);
                                file_syntax();
                            }
                            break;
                            case 2: {
                                setState(123);
                                function();
                            }
                            break;
                        }
                    }
                    setState(126);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == VOID || _la == TYPE || _la == VAR_NAME);
                setState(128);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final File_syntaxContext file_syntax() throws RecognitionException {
        File_syntaxContext _localctx = new File_syntaxContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_file_syntax);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(130);
                declear_var();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Declear_varContext declear_var() throws RecognitionException {
        Declear_varContext _localctx = new Declear_varContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_declear_var);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(133);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == TYPE) {
                    {
                        setState(132);
                        match(TYPE);
                    }
                }

                setState(135);
                match(VAR_NAME);
                setState(138);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == EQUAL) {
                    {
                        setState(136);
                        match(EQUAL);
                        setState(137);
                        val();
                    }
                }

                setState(148);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COLON) {
                    {
                        {
                            setState(140);
                            match(COLON);
                            setState(141);
                            match(VAR_NAME);
                            setState(144);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            if (_la == EQUAL) {
                                {
                                    setState(142);
                                    match(EQUAL);
                                    setState(143);
                                    val();
                                }
                            }

                        }
                    }
                    setState(150);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(151);
                match(SIMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final String_valContext string_val() throws RecognitionException {
        String_valContext _localctx = new String_valContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_string_val);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(153);
                match(STRING_OPEN);
                setState(155);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == STRING_VAL) {
                    {
                        setState(154);
                        match(STRING_VAL);
                    }
                }

                setState(157);
                match(STRING_CLOSE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ValContext val() throws RecognitionException {
        ValContext _localctx = new ValContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_val);
        try {
            setState(162);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case STRING_OPEN:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(159);
                    string_val();
                }
                break;
                case NUM_VAL:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(160);
                    match(NUM_VAL);
                }
                break;
                case BOOL_VAL:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(161);
                    match(BOOL_VAL);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IfdartContext ifdart() throws RecognitionException {
        IfdartContext _localctx = new IfdartContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_ifdart);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(164);
                match(VAR_NAME);
                setState(165);
                match(EQUAL);
                setState(166);
                match(EQUAL);
                setState(167);
                string_val();
                setState(168);
                match(Q_MARK);
                setState(169);
                widget();
                setState(170);
                match(D_DOT);
                setState(171);
                widget();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ArgumentsContext arguments() throws RecognitionException {
        ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_arguments);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(173);
                match(OPEN_HEAD);
                setState(175);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == TYPE) {
                    {
                        setState(174);
                        match(TYPE);
                    }
                }

                setState(178);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == VAR_NAME) {
                    {
                        setState(177);
                        match(VAR_NAME);
                    }
                }

                setState(185);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COLON) {
                    {
                        {
                            setState(180);
                            match(COLON);
                            setState(181);
                            match(TYPE);
                            setState(182);
                            match(VAR_NAME);
                        }
                    }
                    setState(187);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(188);
                match(CLOSE_HEAD);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(190);
                match(OPEN_BODY);
                setState(194);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == TYPE || _la == VAR_NAME) {
                    {
                        {
                            setState(191);
                            declear_var();
                        }
                    }
                    setState(196);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(197);
                match(CLOSE_BODY);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionContext function() throws RecognitionException {
        FunctionContext _localctx = new FunctionContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_function);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(199);
                _la = _input.LA(1);
                if (!(_la == VOID || _la == TYPE)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(200);
                match(VAR_NAME);
                setState(204);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == OPEN_HEAD) {
                    {
                        {
                            setState(201);
                            arguments();
                        }
                    }
                    setState(206);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(207);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ForContext for_() throws RecognitionException {
        ForContext _localctx = new ForContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_for);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(209);
                match(FOR);
                setState(210);
                match(OPEN_HEAD);
                setState(211);
                match(TYPE);
                setState(212);
                match(VAR_NAME);
                setState(213);
                match(EQUAL);
                setState(214);
                val();
                setState(215);
                match(SIMICOLON);
                setState(216);
                match(VAR_NAME);
                setState(217);
                match(OPERATION);
                setState(218);
                val();
                setState(219);
                match(SIMICOLON);
                setState(220);
                match(VAR_NAME);
                setState(221);
                match(OPERATION);
                setState(222);
                match(CLOSE_HEAD);
                setState(223);
                match(OPEN_BODY);
                setState(225);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == TYPE || _la == VAR_NAME) {
                    {
                        setState(224);
                        declear_var();
                    }
                }

                setState(227);
                match(CLOSE_BODY);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FlutterContext flutter() throws RecognitionException {
        FlutterContext _localctx = new FlutterContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_flutter);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(232);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == IMPORT) {
                    {
                        {
                            setState(229);
                            imporT();
                        }
                    }
                    setState(234);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(235);
                main();
                setState(239);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == LIST) {
                    {
                        {
                            setState(236);
                            list();
                        }
                    }
                    setState(241);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(243);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(242);
                            class_();
                        }
                    }
                    setState(245);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == CLASS);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ImporTContext imporT() throws RecognitionException {
        ImporTContext _localctx = new ImporTContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_imporT);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(247);
                match(IMPORT);
                setState(248);
                string_val();
                setState(249);
                match(SIMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
